...
  Widget build(BuildContext context) {
    return Scaffold(
      body: IndexedStack(
        index: _currentIndex,
        children: const [
          Center(child: Text('Home')),
          Center(child: Text('Interventions')),
          Center(child: Text('Boutique')),
          Center(child: Text('Notifications')),
          Center(child: Text('Profil')),
        ],
      ),

...
